--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "Custom React Hook for initializing IntersectionObserver on any node ref",
   "main": "index.js",
   "scripts": {
-    "lint": "node_modules/.bin/standard --fix --verbose **/*.ts | node_modules/.bin/faucet",
-    "build": "npm run lint && tsc",
-    "test": "npm run build && jest"
+    "build": "tsc",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -30,25 +29,30 @@
     "react": "^16.8.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.7.2",
+    "@babel/preset-env": "^7.7.1",
+    "@babel/preset-typescript": "^7.7.2",
     "@types/enzyme": "^3.10.3",
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/jest": "^24.0.22",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.3",
-    "@typescript-eslint/eslint-plugin": "^2.6.0",
+    "@typescript-eslint/eslint-plugin": "^2.6.1",
     "@typescript-eslint/parser": "^2.6.0",
+    "babel-jest": "^24.9.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
     "enzyme-to-json": "^3.4.3",
     "eslint": "^6.6.0",
     "faucet": "0.0.1",
     "jest": "^24.9.0",
-    "jest-environment-jsdom": "^24.9.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "standardjs": "^1.0.0-alpha",
     "ts-jest": "^24.1.0",
     "typescript": "^3.6.4"
   },
-  "dependencies": {}
+  "dependencies": {
+    "intersection-observer": "^0.7.0"
+  }
 }
