--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Custom React Hook for initializing IntersectionObserver on any node ref",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
-    "test": "jest"
+    "lint": "standardx --fix **/*.tsx && standardx --fix **/*.ts",
+    "build": "npm run lint && tsc",
+    "test": "jest",
+    "prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -19,11 +21,15 @@
   ],
   "author": "Serra C Allgood",
   "license": "SEE LICENSE IN LICENSE",
-  "standard": {
+  "eslintConfig": {
+    "rules": {
+      "no-unused-vars": "off",
+      "@typescript-eslint/no-unused-vars": "error"
+    }
+  },
+  "standardx": {
     "parser": "@typescript-eslint/parser",
-    "plugins": [
-      "@typescript-eslint/eslint-plugin"
-    ]
+    "plugins": ["@typescript-eslint/eslint-plugin"]
   },
   "peerDependencies": {
     "react": "^16.8.0"
@@ -38,7 +44,7 @@
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.3",
     "@typescript-eslint/eslint-plugin": "^2.6.1",
-    "@typescript-eslint/parser": "^2.6.0",
+    "@typescript-eslint/parser": "^2.6.1",
     "babel-jest": "^24.9.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
@@ -49,6 +55,7 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "standardjs": "^1.0.0-alpha",
+    "standardx": "^5.0.0",
     "ts-jest": "^24.1.0",
     "typescript": "^3.6.4"
   },
