--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
   },
   "standardx": {
     "parser": "@typescript-eslint/parser",
-    "plugins": ["@typescript-eslint/eslint-plugin"]
+    "plugins": [
+      "@typescript-eslint/eslint-plugin"
+    ]
   },
   "peerDependencies": {
     "react": "^16.8.0"
@@ -53,7 +55,7 @@
     "faucet": "0.0.1",
     "jest": "^24.9.0",
     "react": "^16.11.0",
-    "react-dom": "^16.11.0",
+    "react-dom": "^16.12.0",
     "standardjs": "^1.0.0-alpha",
     "standardx": "^5.0.0",
     "ts-jest": "^24.1.0",
