Update repo in README
Signed-off-by: Serra Allgood <serra@allgood.dev>

--- a/package.json
+++ b/package.json
@@ -11,10 +11,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://git.allgood.dev/jump_spider/react-useintersection"
+    "url": "https://github.com/serra-allgood/react-useintersection"
   },
   "keywords": [
-    "React",
     "React",
     "Hook",
     "IntersectionObserver"
